--- a/lib/oxidized/web/views/head.haml
+++ b/lib/oxidized/web/views/head.haml
@@ -3,7 +3,7 @@
   %meta{:'meta-equiv' => 'X-UA-Compatible', content: 'IE=edge'}
   %meta{name: 'viewport', content: 'width=device-width, initial-scale=1'}
   %meta{name: 'google', content: 'notranslate'}
-  %title oxidized
+  %title Zentro Configuration Backup
   %link{rel: 'shortcut icon', href: url_for('/images/favicon.ico')}
 
   -# Bootstrap
